# hass-datasette-etl

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.dagster.yml  compose.db.yml  compose.yml  dagster.yaml  docker-compose.yml  docker-entrypoint.sh  init_tables.sql  pyproject.toml  test_assets.py  workspace.yaml
hass_datasette_etl/: __init__.py  assets.py  assets_old.py  io_managers.py  resources.py
hass_datasette_etl/assets/: __init__.py  events.py  states.py  statistics.py  utils.py
hass_datasette_etl/hass_dbt/: dbt_project.yml  definitions.py  runner.sh
hass_datasette_etl/hass_dbt/models/example/: my_first_dbt_model.sql
hass_datasette_etl/hass_dbt/models/marts/: events.sql  schema.yml  statistics.sql
hass_datasette_etl/hass_dbt/models/staging/: schema.yml  stg_event_data.sql  stg_event_types.sql  stg_events.sql  stg_statistics.sql  stg_statistics_meta.sql
hass_datasette_etl/profiles/: profiles.yml
sql/: create_views.sql  hex_user.sql  init_tables.sql
utils/: sqlite_to_clickhouse.py
