[project]
name = "hass-datasette-etl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-io-manager",
    "dagster>=1.10.19",
    "dagster-dbt>=0.26.19",
    "dagster-snowflake>=0.26.19",
    "dagster-snowflake-pandas>=0.26.19",
    "dagster-webserver>=1.10.19",
    "dbt-clickhouse>=1.9.2",
    "dbt-core>=1.9.6",
    "dbt-snowflake>=1.9.4",
    "pandas>=2.3.0",
    "requests>=2.31.0",
    "snowflake-connector-python>=3.0.0",
]

[tool.dagster]
module = "hass_datasette_etl"   # import path
attribute = "defs"              # Definitions variable to load

[tool.uv.sources]
clickhouse-io-manager = { git = "https://github.com/mwong94/clickhouse-io-manager.git", rev = "v0.1.7" }
